--- a/dot_doom.d/config.el.tmpl
+++ b/dot_doom.d/config.el.tmpl
@@ -6,8 +6,8 @@
 
 ;; Some functionality uses this to identify you, e.g. GPG configuration, email
 ;; clients, file templates and snippets.
-(setq user-full-name "Derek Wiers"
-      user-mail-address "derek.wiers@brandingbrand.com")
+(setq user-full-name {{ .fullname | quote }}
+      user-mail-address {{ .email | quote }})
 
 ;; Doom exposes five (optional) variables for controlling fonts in Doom. Here
 ;; are the three important ones:
