--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,8 +1,8 @@
 [core]
-    excludesfile = /home/derek/.gitignore_global
+    excludesfile = {{ joinPath .chezmoi.homeDir ".gitignore_global" | quote }}
 [user]
-    name = Derek Wiers
-    email = derek.wiers@brandingbrand.com
+    name = {{ .fullname }}
+    email = {{ .email }}
 [alias]
     # tig-like view
     tree = log --all --graph --decorate --oneline --simplify-by-decoration
@@ -11,7 +11,7 @@
     # git push
     pu = "!git rev-parse --abbrev-ref HEAD | xargs git push -u origin"
     # delete branches that have no unmerged changes related to $1 branch
-    trim = "!git checkout $1 && git pull && git remote prune origin && git branch --merged | grep -v '^\\*' | grep -v master | xargs git branch -d"
+    trim = "!git checkout $1 && git pull && git remote prune origin && git branch --merged | grep -v '^\\*' | grep -v main | xargs git branch -d"
     # list these config definitions
     lla = "!git config -l | grep alias | cut -c 7-"
     # list these config definitions, but only the names
