--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -26,9 +26,9 @@ alias cedit='chezmoi edit'
 
 
 {{ if eq .chezmoi.os "darwin" -}}
-# export NVM_DIR="$HOME/.nvm"
-# [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
-# [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
 {{ else -}}
 source /usr/share/nvm/init-nvm.sh
 {{- end }}
