feat(doom.d/config): tide config

--- a/dot_doom.d/config.el.tmpl
+++ b/dot_doom.d/config.el.tmpl
@@ -52,3 +52,6 @@
 ;;
 ;; You can also try 'gd' (or 'C-c c d') to jump to their definition and see how
 ;; they are implemented.
+
+(setq tide-format-options '(:indentSize 2 :tabSize 2 :convertTabsToSpaces t ))
+
