--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,5 +1,6 @@
 export ZSH={{ (joinPath .chezmoi.homeDir ".oh-my-zsh") | quote }}
 export PATH=$PATH:$HOME/bin
+export PATH=$PATH:$HOME/.local/bin
 {{ if ne .chezmoi.os "darwin" -}}
 export _JAVA_AWT_WM_NONREPARENTING=1
 {{- end }}
